Ex2 - SynchronousQueue should be done.

--- a/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
+++ b/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Catia\Ex1_Completion.cs" />
+    <Compile Include="Pedro\Ex1_Completion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncUtils.cs" />
@@ -49,9 +50,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pedro\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
