--- a/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
+++ b/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Catia\Ex1_Completion.cs" />
     <Compile Include="Pedro\Ex1_Completion.cs" />
     <Compile Include="Pedro\Ex4_MessageQueue.cs" />
+    <Compile Include="Pedro\Ex5_Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncUtils.cs" />
