--- a/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
+++ b/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Catia\Ex1_Completion.cs" />
+    <Compile Include="Catia\Ex6RendezvousChannel.cs" />
     <Compile Include="Pedro\Ex1_Completion.cs" />
     <Compile Include="Pedro\Ex4_MessageQueue.cs" />
     <Compile Include="Pedro\Ex5_Logger.cs" />
