--- a/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
+++ b/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
@@ -39,11 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Catia\ConcurrentQueue_C.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Catia\" />
     <Folder Include="Pedro\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
