--- a/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
+++ b/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Catia\Completion_C.cs" />
     <Compile Include="Catia\ConcurrentQueue_C.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
