--- a/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
+++ b/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Catia\Completion_C.cs" />
     <Compile Include="Catia\ConcurrentQueue_C.cs" />
+    <Compile Include="Catia\SyncUtils.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
