--- a/Serie3/Serie_3_Cat/Serie_3_Cat/ServerApp.csproj
+++ b/Serie3/Serie_3_Cat/Serie_3_Cat/ServerApp.csproj
@@ -60,9 +60,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\Listener.cs" />
-    <Compile Include="Server\TextBoxStreamWriter.cs" />
-    <Compile Include="Server\Logger.cs" />
-    <Compile Include="Server\Store.cs" />
     <EmbeddedResource Include="ServerForm.resx">
       <DependentUpon>ServerForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,7 +88,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ServerUtils\ServerUtils.csproj">
+      <Project>{0BA74047-8E59-4C62-A38C-8EC8EE1A949F}</Project>
+      <Name>ServerUtils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
