--- a/Serie3/Serie_3_Cat/Serie_3_Cat/ServerApp.csproj
+++ b/Serie3/Serie_3_Cat/Serie_3_Cat/ServerApp.csproj
@@ -59,7 +59,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server\Listener.cs" />
+    <Compile Include="Listener.cs" />
     <EmbeddedResource Include="ServerForm.resx">
       <DependentUpon>ServerForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +93,9 @@
       <Project>{0BA74047-8E59-4C62-A38C-8EC8EE1A949F}</Project>
       <Name>ServerUtils</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Server\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
