Cenas antigas da Série 2.

--- a/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
+++ b/Serie2/CLI/Serie_2/Serie_2/Serie_2.csproj
@@ -41,13 +41,12 @@
   <ItemGroup>
     <Compile Include="Catia\Completion_C.cs" />
     <Compile Include="Catia\ConcurrentQueue_C.cs" />
-    <Compile Include="Catia\SyncUtils.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Pedro\ConcurrentQueue_P.cs" />
+    <Compile Include="SyncUtils.cs" />
+    <Compile Include="Pedro\NonBlockingCompletion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pedro\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
