--- a/Serie3/Serie_3_Cat/FileSearchTPL/FileSearchTPL.csproj
+++ b/Serie3/Serie_3_Cat/FileSearchTPL/FileSearchTPL.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="FileSearcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
