--- a/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
+++ b/Serie1/CLI/Serie_1/Serie_1/Serie_1.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Catia\Ex1_Completion.cs" />
-    <Compile Include="Catia\Ex6RendezvousChannel.cs" />
+    <Compile Include="Catia\Ex6_RendezvousChannel.cs" />
     <Compile Include="Pedro\Ex1_Completion.cs" />
     <Compile Include="Pedro\Ex4_MessageQueue.cs" />
     <Compile Include="Pedro\Ex5_Logger.cs" />
