Logger Tests added

--- a/Serie1/CLI/Serie_1/Serie_1_Tests/Serie_1_Tests.csproj
+++ b/Serie1/CLI/Serie_1/Serie_1_Tests/Serie_1_Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Catia\Ex1_CompletionTests.cs" />
     <Compile Include="Catia\Ex4_MessageQueueTests.cs" />
+    <Compile Include="Catia\Ex5_LoggerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
