Added Rendezvous Channel tests + updated other tests. All OK for now.

--- a/Serie1/CLI/Serie_1/Serie_1_Tests/Serie_1_Tests.csproj
+++ b/Serie1/CLI/Serie_1/Serie_1_Tests/Serie_1_Tests.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Catia\Ex1_CompletionTests.cs" />
     <Compile Include="Catia\Ex4_MessageQueueTests.cs" />
     <Compile Include="Catia\Ex5_LoggerTests.cs" />
+    <Compile Include="Catia\Ex6_RendezvousChannel.cs" />
+    <Compile Include="Catia\TestUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
